# CSA

./: README.md
Assembly/: InRand.asm  Input.asm  Main.asm  Output.asm  README.md  SurfaceSquare.asm  macros.mac
Assembly/tests/: test1.txt  test2.txt  test3.txt  test4.txt  test6.txt
CSA_HW1/: parallelepiped.cpp  parallelepiped.h  rand.h  readme  regtet.h
CSA_HW1/tests/: test1  test3  test5  test6
CSA_HW2/: CMakeLists.txt  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  rand.h  regtet.cpp  regtet.h  shape.cpp  shape.h  sphere.cpp  sphere.h
CSA_HW2/tests/: test10  test2  test3  test5  test6  test7  test8
DynamicTyping/: README.md  container.py  main.py  parallelepiped.py  regtet.py  shape.py  sphere.py
DynamicTyping/tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
Multithread/: CMakeLists.txt  Girl.cpp  Girl.h  Guy.cpp  Guy.h  README  Random.h  main.cpp
Objective Oriented/: README  container.h  rand.h  shape.cpp  shape.h  sphere.cpp  sphere.h
Objective Oriented/tests/: test1  test11
ProcedureStyle/: CMakeLists.txt  README.md  container.cpp  container.h  main.cpp  regtet.cpp  shape.cpp  shape.h  sphere.cpp  sphere.h
ProcedureStyle/tests/: test2
